--- a/index.html
+++ b/index.html
@@ -32,7 +32,117 @@
             </article>
             <img src="./dindin-imagens/ilustra-banner.png" alt="banner">
         </section>
+        <section id="cursos" class="background-gray flex just-between">
+            <article>
+                <img src="./dindin-imagens/ilustra-poupando.png" alt="poupando">
+                <h3>
+                    Investimento para iniciantes
+                </h3>
+                <p>
+                    Duis aute irure dolor in reprehenderit in voluptate velit es se cillum dolore eu fugiat nulla pariatur.
+                </p>
+                <a href="">começar agora</a>
+            </article>
+            <article>
+                <img src="./dindin-imagens/ilustra-investimento.png" alt="Investimento">
+                <h3>
+                    Poupando e Rendendo
+                </h3>
+                <p>
+                    Duis aute irure dolor in reprehenderit in voluptate velit es se cillum dolore eu fugiat nulla pariatur.
+                </p>
+                <a href="">começar agora</a>
+            </article>
+            <article>
+                <img src="./dindin-imagens/ilustra-independencia.png"" alt="Independencia">
+                <h3>
+                    Independência Financeira
+                </h3>
+                <p>
+                    Duis aute irure dolor in reprehenderit in voluptate velit es se cillum dolore eu fugiat nulla pariatur.
+                </p>
+                <a href="">começar agora</a>
+            </article>
+        </section>
+        <h2 class="letter-green">O QUE FALAM SOBRE NÓS</h2>
+        <section id="sobre-nos" class="flex just-around">           
+            <article class="flex align just-around">
+                <img src="./dindin-imagens/icon-wally.png" alt="wally">
+                <p>
+                    ”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”<br>
+                    <strong>Wally, 25</strong>
+                </p>
+            </article>
+            <article class="flex align just-around">
+                <img src="./dindin-imagens/icon-whoopi.png" alt="icon-whoopi">
+                <p>
+                    ”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”<br>
+                    <strong>Whoopi Golberd, 37</strong>
+                </p>
+            </article>
+            <article class="flex align just-around">
+                <img src="./dindin-imagens/icon-jaden.png" alt="Jaden">
+                <p>
+                    ”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”<br>
+                    <strong>Jaden Smith, 23</strong>
+                </p>
+                </article>
+                <article class="flex align just-around">
+                <img src="./dindin-imagens/icon-jane.png" alt="Jane">
+                <p>
+                    ”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”<br>
+                    <strong>Jane, 29</strong>
+                </p>
+            </article>
+        </section>        
+        <section id="ultimasessao" class="align just-between">
+            <h2> MAIS CONTEÚDO PARA VOCÊ</h2>
+            <div class="flex just-evenly">
+                <article>                
+                    <div class="retangulo"></div>
+                    <h3>
+                     Itaque earum rerum 
+                    </h3>
+                    <p>
+                     hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+                     </p>
+                 </article>
+                 <article>
+                     <div class="retangulo"></div>
+                    <h3>
+                     Itaque earum rerum 
+                    </h3>
+                    <p>
+                     hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+                     </p>                
+                 </article>
+                 <article>
+                     <div class="retangulo"></div>
+                    <h3>
+                     Itaque earum rerum 
+                    </h3>
+                    <p>
+                     hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+                     </p>
+                 </article>
+            </div>
+            <nav>
+                <a href="">Ver todos os posts</a>              
+            </nav>                        
+        </section>
     </main>
-    
+    <footer class="background-green flex just-evenly align">
+        <a href="index.html"><img src="./dindin-imagens/logo-footer.png" alt="logo-footer"></a>        
+        <nav class="flex" id="contato">
+            <a href="">cursos</a>
+            <a href="">blog</a>
+            <a href="">contato</a>
+        </nav>
+        <div id="button" class="flex">
+            <a href="">quero ser prof</a>                   
+            <a href="">aqui tem outro link
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
