--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="media.css">
 </head>
 <body>
-    <header class="background-green flex align just-between">
+    <header class="background-green flex wrap align just-between">
         <img src="./dindin-imagens/logo-header.png" alt="logo1">
         <nav>
             <a href="">CURSOS</a>
@@ -20,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <section id="banner1" class="flex just-evenly">
+        <section id="banner1" class="flex wrap just-evenly">
             <article>
                 <h1 class="letter-pink">
                     Educação Financeira é tudo de bom
@@ -32,7 +33,7 @@
             </article>
             <img src="./dindin-imagens/ilustra-banner.png" alt="banner">
         </section>
-        <section id="cursos" class="background-gray flex just-between">
+        <section id="cursos" class="background-gray flex wrap just-between">
             <article>
                 <img src="./dindin-imagens/ilustra-poupando.png" alt="poupando">
                 <h3>
@@ -64,7 +65,7 @@
                 <a href="">começar agora</a>
             </article>
         </section>
-        <h2 class="letter-green">O QUE FALAM SOBRE NÓS</h2>
+        <h2 id="sobre-nos-text" class="letter-green">O QUE FALAM SOBRE NÓS</h2>
         <section id="sobre-nos" class="flex just-around">           
             <article class="flex align just-around">
                 <img src="./dindin-imagens/icon-wally.png" alt="wally">
@@ -97,7 +98,7 @@
         </section>        
         <section id="ultimasessao" class="align just-between">
             <h2> MAIS CONTEÚDO PARA VOCÊ</h2>
-            <div class="flex just-evenly">
+            <div class="flex wrap just-evenly">
                 <article>                
                     <div class="retangulo"></div>
                     <h3>
@@ -131,14 +132,14 @@
             </nav>                        
         </section>
     </main>
-    <footer class="background-green flex just-evenly align">
+    <footer class="background-green flex wrap just-evenly align">
         <a href="index.html"><img src="./dindin-imagens/logo-footer.png" alt="logo-footer"></a>        
-        <nav class="flex" id="contato">
+        <nav class="flex wrap" id="contato">
             <a href="">cursos</a>
             <a href="">blog</a>
             <a href="">contato</a>
         </nav>
-        <div id="button" class="flex">
+        <div id="button" class="flex wrap">
             <a href="">quero ser prof</a>                   
             <a href="">aqui tem outro link
             </a>
