--- a/contato.html
+++ b/contato.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
     <link rel="stylesheet" href="contato.css">
+    <link rel="stylesheet" href="media.css">
 </head>
 <body>
     <header class="background-green flex align just-between">
@@ -16,5 +17,32 @@
             <a href="">CONTATO</a>
         </nav>
     </header>
+    <section id="formulario" class="flex align just-evenly">
+        <article class="flex">
+            <h1 class="letter-pink">
+                Contato
+            </h1>
+            <form action="">
+                <input type="text" placeholder="nome">
+                <input type="text" placeholder="e-mail">
+                <textarea id="" cols="30" rows="10" placeholder="mensagens"></textarea>
+                <button type="submit">entrar</button>
+            </form>         
+        </article>
+        <img class="flex" src="./dindin-imagens/ilustra-contato.png" alt="ilustra-contato">
+    </section>
+        <footer class="background-green flex wrap just-evenly align">
+        <a href="index.html"><img src="./dindin-imagens/logo-footer.png" alt="logo-footer"></a>        
+        <nav class="flex wrap" id="contato">
+            <a href="">cursos</a>
+            <a href="">blog</a>
+            <a href="">contato</a>
+        </nav>
+        <div id="button" class="flex wrap">
+            <a href="">quero ser prof</a>                   
+            <a href="">aqui tem outro link
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
