criando a última página post

--- a/cursos.html
+++ b/cursos.html
@@ -15,9 +15,9 @@
     <header class="background-green flex wrap align just-between">
         <img src="./dindin-imagens/logo-header.png" alt="logo1">
         <nav>
-            <a href="">CURSOS</a>
-            <a href="">BLOG</a>
-            <a href="">CONTATO</a>
+            <a href="cursos.html">CURSOS</a>
+            <a href="blog.html">BLOG</a>
+            <a href="contato.html">CONTATO</a>
         </nav>
     </header>
 <main id="banner-cursos">
@@ -56,9 +56,9 @@
     <footer class="background-green flex wrap just-evenly align">
         <a href="index.html"><img src="./dindin-imagens/logo-footer.png" alt="logo-footer"></a>        
         <nav class="flex wrap" id="contato">
-            <a href="">cursos</a>
-            <a href="">blog</a>
-            <a href="">contato</a>
+            <a href="cursos.html">cursos</a>
+            <a href="blog.html">blog</a>
+            <a href="contato.html">contato</a>
         </nav>
         <div id="button" class="flex wrap">
             <a href="">quero ser prof</a>                   
