--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </article>
             <img src="./dindin-imagens/ilustra-banner.png" alt="banner">
         </section>
-        <section id="cursos" class="background-gray flex wrap just-between">
+        <section id="cursos" class="background-gray flex wrap just-evenly">
             <article>
                 <img src="./dindin-imagens/ilustra-poupando.png" alt="poupando">
                 <h3>
@@ -128,7 +128,7 @@
                  </article>
             </div>
             <nav>
-                <a href="">Ver todos os posts</a>              
+                <a href="post.html">Ver todos os posts</a>              
             </nav>                        
         </section>
     </main>
