--- a/cursos.html
+++ b/cursos.html
@@ -29,7 +29,7 @@
             <h3 class="letter-pink">Investimento para iniciantes</h3>
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
             </p>
-            <a href="">Começar agora</a>
+            <a href="Curso.html">Começar agora</a>
         </article>
     </section>
     <hr>
@@ -39,7 +39,7 @@
             <h3 class="letter-pink">Poupando e Rendendo</h3>
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
             </p>
-            <a href="">Começar agora</a>
+            <a href="Curso.html">Começar agora</a>
         </article>
     </section>
     <hr>
@@ -49,7 +49,7 @@
             <h3 class="letter-pink">Independência Financeira</h3>
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
             </p>
-            <a href="">Começar agora</a>
+            <a href="Curso.html">Começar agora</a>
         </article>
     </section>
 </main>
